--- a/exalt-app/src/app/pages/home/home.page.html
+++ b/exalt-app/src/app/pages/home/home.page.html
@@ -3,13 +3,13 @@
       <app-topbar></app-topbar>  
   </ion-header>
   <ion-content>        
-      <div no-padding class="container">
+      <div class="ion-no-padding container">
           <img src="../../../assets/download.jpg">
           <ion-label>{{firstitem.title}}</ion-label>
       </div>
-      <ion-grid no-padding>
-          <ion-row no-padding *ngFor="let n of newsdata">
-              <ion-col no-padding><img style="object-fit: fill;" src={{n.image}}></ion-col>
+      <ion-grid class="ion-no-padding">
+          <ion-row class="ion-no-padding" *ngFor="let n of newsdata">
+              <ion-col class="ion-no-padding"><img style="object-fit: fill;" src={{n.image}}></ion-col>
               <ion-col style="padding-top: 0px;">{{n.title}}</ion-col>
           </ion-row>
       </ion-grid>     
