--- a/exalt-app/src/app/pages/news/news.page.html
+++ b/exalt-app/src/app/pages/news/news.page.html
@@ -2,8 +2,9 @@
   <ion-header style='background-color:white'>    
       <app-topbar></app-topbar>  
   </ion-header>
-  <ion-content>        
-          
+  <ion-content style='background-color:#F0F3F8'>
+    <p>yubhkj</p>
+    
   </ion-content>
   <ion-footer>
       <ion-toolbar>
